# cli

./: README.md
project_templates/blank/: Cargo.toml  README.md  build.rs
project_templates/blank/res/lang/en/: _.ftl
project_templates/blank/src/: app_ftl.rs  ftl.rs  main.rs
