[package]
name = "unnamed-application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rialight = "1"

[build-dependencies]
rialight_build = "1"

# rialight

[package.metadata.rialight.application]
id = "$id"
title = "Untitled Application"

[[package.metadata.rialight.install-files]]
match = "res/lang/**/*.ftl"